--- a/front/package.json
+++ b/front/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@redux-saga/core": "^1.1.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -16,6 +17,9 @@
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
+    "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
